// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PProgress > renders with animation carousel correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" class="" data-pohon="progress-indicator"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with animation carousel-inverse correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" class="" data-pohon="progress-indicator"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with animation elastic correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" class="" data-pohon="progress-indicator"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with animation swing correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" class="" data-pohon="progress-indicator"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with as correctly 1`] = `
"<section data-orientation="horizontal" class="" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" class="" data-pohon="progress-indicator"></div>
  </div>
  <!--v-if-->
</section>"
`;

exports[`PProgress > renders with class correctly 1`] = `
"<div data-orientation="horizontal" class="w-48" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" class="" data-pohon="progress-indicator"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with color neutral correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-label="50%" role="progressbar" data-state="loading" data-value="50" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="loading" data-value="50" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-50%);"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with max correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <div class="" data-pohon="progress-status" style="width: 50%;">50% </div>
  <div aria-valuemax="4" aria-valuemin="0" aria-valuenow="2" aria-label="50%" role="progressbar" data-state="loading" data-value="2" data-max="4" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="loading" data-value="2" data-max="4" class="" data-pohon="progress-indicator" style="transform: translateX(-50%);"></div>
  </div>
  <div class="" data-pohon="progress-steps">
    <div class="" data-pohon="progress-step">Waiting...</div>
    <div class="" data-pohon="progress-step">Cloning...</div>
    <div class="" data-pohon="progress-step">Migrating...</div>
    <div class="" data-pohon="progress-step">Deploying...</div>
    <div class="" data-pohon="progress-step">Done!</div>
  </div>
</div>"
`;

exports[`PProgress > renders with max inverted correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <div class="" data-pohon="progress-status" style="width: 50%;">50% </div>
  <div aria-valuemax="4" aria-valuemin="0" aria-valuenow="2" aria-label="50%" role="progressbar" data-state="loading" data-value="2" data-max="4" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="loading" data-value="2" data-max="4" class="" data-pohon="progress-indicator" style="transform: translateX(50%);"></div>
  </div>
  <div class="" data-pohon="progress-steps">
    <div class="" data-pohon="progress-step">Waiting...</div>
    <div class="" data-pohon="progress-step">Cloning...</div>
    <div class="" data-pohon="progress-step">Migrating...</div>
    <div class="" data-pohon="progress-step">Deploying...</div>
    <div class="" data-pohon="progress-step">Done!</div>
  </div>
</div>"
`;

exports[`PProgress > renders with modelValue correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-label="50%" role="progressbar" data-state="loading" data-value="50" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="loading" data-value="50" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-50%);"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" class="" data-pohon="progress-indicator"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" class="" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" class="" data-pohon="progress-indicator"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with size 2xl correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" class="" data-pohon="progress-indicator"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with size 2xs correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" class="" data-pohon="progress-indicator"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with size lg correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" class="" data-pohon="progress-indicator"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with size md correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" class="" data-pohon="progress-indicator"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with size sm correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" class="" data-pohon="progress-indicator"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with size xl correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" class="" data-pohon="progress-indicator"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with size xs correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" class="" data-pohon="progress-indicator"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with status correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <div class="" data-pohon="progress-status" style="width: 50%;">50% </div>
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-label="50%" role="progressbar" data-state="loading" data-value="50" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="loading" data-value="50" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(-50%);"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with status inverted correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <div class="" data-pohon="progress-status" style="width: 50%;">50% </div>
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-label="50%" role="progressbar" data-state="loading" data-value="50" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="loading" data-value="50" data-max="100" class="" data-pohon="progress-indicator" style="transform: translateX(50%);"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with status slot correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" class="" data-pohon="progress-indicator"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PProgress > renders with ui correctly 1`] = `
"<div data-orientation="horizontal" class="" data-pohon="progress-root">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" class="bg-default" data-pohon="progress-base" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" class="" data-pohon="progress-indicator"></div>
  </div>
  <!--v-if-->
</div>"
`;
